--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="javascript.js"></script>
     <title>Document</title>
 </head>
 <body>
     <script>
-  
+        var suma=0
+        const numeros=[33,55,77,81,48]
+        for (i=0;i<5;i++){
+            suma=suma+numeros[i]
+            console.log(numeros[i])
+        }console.log(suma)
     </script>
 </body>
 </html>
