--- a/ejercicios _html/index.html
+++ b/ejercicios _html/index.html
@@ -14,17 +14,21 @@
 </head>
 <body>
     Nombre <input type="text" id="nombre"><br>
+    <br>
     Edad <input type="number" id="edad"><br>
+    <br>
     Genero <select id="genero">
         <option value=""></option>
         <option value="f">femenino</option>
         <option value="m">masculino</option>
     </select><br>
+    <br>
     Fecha_de_nacimiento <input type="date" id="fecha"><br>
     <br>
     <button type="submit" id="insert">Añadir</button>
     <button id="mNombres">Nombres</button>
     <button id="mEdades">Edades</button>
+    <button id="porcentaje">Porcentaje</button>
     <div id="pantalla"></div>
     
 </body>
